# zeichnungen-verwalten

./: .gitignore  README.md  pyproject.toml
docs/: jtbd-01-scanning-and-processing-files.md  jtbd-02-putting-png-away.md  jtbd-03-create-html-gallery.md  jtbd-04-export-images-with-watermark.md  jtbd-05-reference-grid-prep.md  spec-filename-metadata-contract.md
tests/: test_meta_extraction.py
zeichnungsverwaltung/: __main__.py  drawings_products.py  image_processing.py  known_paths.py  meta_extraction.py  publishers.py  publishing.py  raw_images.py
zeichnungsverwaltung/export/: cli.py  publishers.py
zeichnungsverwaltung/html_gallery/: html_gallery.py
zeichnungsverwaltung/html_gallery/templates/: base.html.j2  gallery.html.j2  overview.html.j2  picture.html.j2
zeichnungsverwaltung/tools/: align_originals.py  apply_watermark.py  fsck.py  grid.py  inspect.py  metadata_into_filename.py  process.py  publish_to_nikola.py  raw_image_size.py  scan.py
