[tool.poetry]
name = "zeichnungsverwaltung"
version = "0.1.0"
description = ""
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
zv = "zeichnungsverwaltung.__main__:main"

[tool.poetry.dependencies]
python = "^3.13"
pillow = "^11.1.0"
python-xmp-toolkit = "^2.0.2"
setuptools = "^75.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
