[project]
name = "zeichnungsverwaltung"
version = "0.5.0"
description = ""
authors = [{ name = "Martin Ueding", email = "mu@martin-ueding.de" }]
requires-python = ">=3.13,<4"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pillow>=11.1.0,<12",
    "python-xmp-toolkit>=2.0.2,<3",
    "setuptools>=75.8.0,<76",
    "tqdm>=4.67.1,<5",
    "jinja2>=3.1.6,<4",
    "markdown>=3.8.2,<4",
    "pymdown-extensions>=10.16.1,<11",
]

[project.scripts]
zv-publish = "zeichnungsverwaltung.__main__:main"
zv-dump = "zeichnungsverwaltung.__main__:dump"
zv-gallery = "zeichnungsverwaltung.html_gallery.html_gallery:main"
zv-metadata-into-filename = "zeichnungsverwaltung.tools.metadata_into_filename:main"
zv-align-originals = "zeichnungsverwaltung.tools.align_originals:main"
zv-raw-image-size = "zeichnungsverwaltung.tools.raw_image_size:main"
zv-scan = "zeichnungsverwaltung.tools.scan:main"
zv-process = "zeichnungsverwaltung.tools.process:main"
zv-apply-watermark = "zeichnungsverwaltung.tools.apply_watermark:main"
zv-grid = "zeichnungsverwaltung.tools.grid:main"

[dependency-groups]
dev = ["pytest>=8.3.4,<9"]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
major_version_zero = true

[build-system]
requires = ["uv_build>=0.9.30,<0.10.0"]
build-backend = "uv_build"
